[package]
name = "neon-johnston"
version = "0.1.0"
authors = ["Joseph Post <joe@jcpst.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_johnston"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
johnston = { path = "../../johnston" }
