[package]
name = "neon-johnston"
version = "0.1.0"
authors = ["Joseph Post <joe@jcpst.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_johnston"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
johnston = "0.1.0"
